--- a/Site1/Page-1.html
+++ b/Site1/Page-1.html
@@ -120,7 +120,7 @@ to find, compare, Order Amazon and Flipkart baby products.</p>
                 <img alt="" class="u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-expanded-width-xs u-image u-image-default u-image-1" data-image-width="1100" data-image-height="1100" src="images/WhatsAppImage2022-03-31at10.16.39AM1-14.jpeg">
                 <h3 class="u-text u-text-default u-text-1"> Dancing Cactus Toy<span style="font-weight: 700;"></span>
                 </h3>
-                <p class="u-text u-text-2"> Wembley Dancing Cactus Toy for Baby Funny Cactus Talking Toy for Baby Kids Soft Plush Talk Back Toy, Can Sing, Record and Repeats What You Say Creative Kids Educational Musical Toys Game for Children Rechargeable.<br>Please click the Amazon link below to order. Place your order
+                <p class="u-small-text u-text u-text-variant u-text-2"> Wembley Dancing Cactus Toy for Baby Funny Cactus Talking Toy for Baby Kids Soft Plush Talk Back Toy, Can Sing, Record and Repeats What You Say Creative Kids Educational Musical Toys Game for Children Rechargeable.<br>Please click the Amazon link below to order. Place your order
 today.&nbsp;&nbsp;&nbsp;&nbsp;<br>
                 </p>
                 <a href="https://amzn.to/3iOacdS" class="u-active-none u-border-hover-palette-2-base u-border-none u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-1">amazon.in</a>
@@ -130,7 +130,7 @@ today.&nbsp;&nbsp;&nbsp;&nbsp;<br>
               <div class="u-container-layout u-similar-container u-container-layout-2">
                 <img alt="" class="u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-expanded-width-xs u-image u-image-default u-image-2" data-image-width="500" data-image-height="500" src="images/33-removebg-preview.png">
                 <h3 class="u-text u-text-default u-text-3"> FEEL SOFT TOYS Teddy bear 6 feet</h3>
-                <p class="u-text u-text-4"> HUG 'n' FEEL SOFT TOYS Teddy bear 6 feet, Soft toy, Teddy bear 6 feet for girls, Teddy bear 6 feet for girls, Soft toys for kids, Birthday gift for girls,Wife,Girlfriend,Husband, Gift items toy, (Purple, 6 feet)<br>Please click the Amazon link below to order. Place your order
+                <p class="u-small-text u-text u-text-variant u-text-4"> HUG 'n' FEEL SOFT TOYS Teddy bear 6 feet, Soft toy, Teddy bear 6 feet for girls, Teddy bear 6 feet for girls, Soft toys for kids, Birthday gift for girls,Wife,Girlfriend,Husband, Gift items toy, (Purple, 6 feet)<br>Please click the Amazon link below to order. Place your order
 today.&nbsp;&nbsp;&nbsp;&nbsp;<br>
                 </p>
                 <a href="https://amzn.to/3j2jQcP" class="u-active-none u-border-hover-palette-2-base u-border-none u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-2">amazon.in</a>
@@ -140,7 +140,7 @@ today.&nbsp;&nbsp;&nbsp;&nbsp;<br>
               <div class="u-container-layout u-similar-container u-container-layout-3">
                 <img alt="" class="u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-expanded-width-xs u-image u-image-default u-image-3" data-image-width="564" data-image-height="442" src="images/81-1xs0GrpL._SL1500_-removebg-preview.png">
                 <h3 class="u-text u-text-default u-text-5"> Army style toy gun</h3>
-                <p class="u-text u-text-6"> zest 4 toyz 25 musical army style toy gun for kids with music, lights and laser light (Multi color).<br>Please click the Amazon link below to order. Place your order
+                <p class="u-small-text u-text u-text-variant u-text-6"> zest 4 toyz 25 musical army style toy gun for kids with music, lights and laser light (Multi color).<br>Please click the Amazon link below to order. Place your order
 today.&nbsp;&nbsp;&nbsp;&nbsp;<br>
                 </p>
                 <a href="https://amzn.to/3u8SDvD" class="u-active-none u-border-hover-palette-2-base u-border-none u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-3">amazon.in</a>
