--- a/Site1/Page-1.html
+++ b/Site1/Page-1.html
@@ -123,7 +123,7 @@ to find, compare, Order Amazon and Flipkart baby products.</p>
                 <p class="u-small-text u-text u-text-variant u-text-2"> Wembley Dancing Cactus Toy for Baby Funny Cactus Talking Toy for Baby Kids Soft Plush Talk Back Toy, Can Sing, Record and Repeats What You Say Creative Kids Educational Musical Toys Game for Children Rechargeable.<br>Please click the Amazon link below to order. Place your order
 today.&nbsp;&nbsp;&nbsp;&nbsp;<br>
                 </p>
-                <a href="https://amzn.to/3iOacdS" class="u-active-none u-border-hover-palette-2-base u-border-none u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-1">amazon.in</a>
+                <a href="https://amzn.to/3iOacdS" class="u-active-none u-border-hover-palette-2-base u-border-none u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-1" target="_blank">amazon.in</a>
               </div>
             </div>
             <div class="u-container-style u-gradient u-list-item u-repeater-item u-list-item-2">
@@ -133,7 +133,7 @@ today.&nbsp;&nbsp;&nbsp;&nbsp;<br>
                 <p class="u-small-text u-text u-text-variant u-text-4"> HUG 'n' FEEL SOFT TOYS Teddy bear 6 feet, Soft toy, Teddy bear 6 feet for girls, Teddy bear 6 feet for girls, Soft toys for kids, Birthday gift for girls,Wife,Girlfriend,Husband, Gift items toy, (Purple, 6 feet)<br>Please click the Amazon link below to order. Place your order
 today.&nbsp;&nbsp;&nbsp;&nbsp;<br>
                 </p>
-                <a href="https://amzn.to/3j2jQcP" class="u-active-none u-border-hover-palette-2-base u-border-none u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-2">amazon.in</a>
+                <a href="https://amzn.to/3j2jQcP" class="u-active-none u-border-hover-palette-2-base u-border-none u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-2" target="_blank">amazon.in</a>
               </div>
             </div>
             <div class="u-container-style u-gradient u-list-item u-repeater-item u-list-item-3">
@@ -143,7 +143,7 @@ today.&nbsp;&nbsp;&nbsp;&nbsp;<br>
                 <p class="u-small-text u-text u-text-variant u-text-6"> zest 4 toyz 25 musical army style toy gun for kids with music, lights and laser light (Multi color).<br>Please click the Amazon link below to order. Place your order
 today.&nbsp;&nbsp;&nbsp;&nbsp;<br>
                 </p>
-                <a href="https://amzn.to/3u8SDvD" class="u-active-none u-border-hover-palette-2-base u-border-none u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-3">amazon.in</a>
+                <a href="https://amzn.to/3u8SDvD" class="u-active-none u-border-hover-palette-2-base u-border-none u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-3" target="_blank">amazon.in</a>
               </div>
             </div>
           </div>
