--- a/Home.html
+++ b/Home.html
@@ -20,8 +20,8 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "",
-		"logo": "images/12-removebg-preview-5.png",
+		"name": "juniorstore",
+		"logo": "images/12-removebg-preview.png",
 		"sameAs": [
 				"https://www.facebook.com/SengarPihu/",
 				"https://www.instagram.com/baby_styleproducts/",
@@ -33,11 +33,12 @@
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Home">
+    <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-xl-mode"><header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-35c2"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="208" data-image-height="145">
-          <img src="images/12-removebg-preview-5.png" class="u-logo-image u-logo-image-1">
+          <img src="images/12-removebg-preview.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-align-left u-dropdown-icon u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem;">
@@ -50,7 +51,6 @@
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Home.html" style="padding: 10px 20px;">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Products.html" style="padding: 10px 20px;">Products</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Page-1.html" style="padding: 10px 20px;">Page 1</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -59,7 +59,6 @@
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Products.html">Products</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Page-1.html">Page 1</a>
 </li></ul>
               </div>
             </div>
@@ -79,66 +78,70 @@
           </a>
         </div>
       </div></header>
-    <section class="u-clearfix u-valign-top-lg u-valign-top-md u-valign-top-xl u-section-1" id="carousel_9c88">
+    <section class="u-clearfix u-section-1" id="carousel_9c88">
       <div class="u-expanded-width u-palette-2-light-2 u-shape u-shape-rectangle u-shape-1"></div>
       <div class="u-container-style u-group u-shape-rectangle u-group-1">
         <div class="u-container-layout u-container-layout-1">
           <h1 class="u-custom-font u-font-merriweather u-text u-text-1"> Online Baby Store​.</h1>
-          <p class="u-custom-font u-font-montserrat u-text u-text-default-xl u-text-2"> Best place to find, compare, Order Amazon and
+          <p class="u-custom-font u-font-montserrat u-text u-text-default u-text-2"> Best place to find, compare, Order Amazon and
 Flipkart baby products.</p>
         </div>
       </div>
       <div class="u-clearfix u-layout-wrap u-layout-wrap-1">
         <div class="u-layout">
           <div class="u-layout-row">
-            <div class="u-align-left u-container-style u-hidden-sm u-hidden-xs u-layout-cell u-size-20 u-layout-cell-1">
-              <div class="u-container-layout u-container-layout-2">
-                <img class="u-expanded-width u-image u-image-default u-image-1" src="images/FashionLookFeaturingDisneyKidsNurseryClothesandToysandDisneyClothesandShoesbynewdarlings-ShopStyle.jpg" alt="" data-image-width="864" data-image-height="1080">
+            <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-1" data-animation-name="customAnimationIn" data-animation-duration="2000">
+              <div class="u-container-layout u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-xl u-valign-top-sm u-valign-top-xs u-container-layout-2">
+                <img class="u-image u-image-default u-image-1" src="images/FashionLookFeaturingDisneyKidsNurseryClothesandToysandDisneyClothesandShoesbynewdarlings-ShopStyle.jpg" alt="" data-image-width="864" data-image-height="1080">
               </div>
             </div>
-            <div class="u-container-style u-image u-layout-cell u-size-20 u-image-2" data-image-width="480" data-image-height="640" data-animation-name="customAnimationIn" data-animation-duration="2000">
+            <div class="u-container-style u-hidden-sm u-hidden-xs u-layout-cell u-size-15 u-layout-cell-2">
               <div class="u-container-layout u-container-layout-3"></div>
             </div>
-            <div class="u-container-style u-layout-cell u-size-20 u-layout-cell-3" data-animation-name="customAnimationIn" data-animation-duration="2000">
-              <div class="u-container-layout u-valign-bottom-sm u-valign-bottom-xs u-container-layout-4">
+            <div class="u-container-style u-image u-layout-cell u-size-15 u-image-2" data-image-width="480" data-image-height="640" data-animation-name="customAnimationIn" data-animation-duration="2000">
+              <div class="u-container-layout u-container-layout-4"></div>
+            </div>
+            <div class="u-container-style u-layout-cell u-size-15 u-layout-cell-4" data-animation-name="customAnimationIn" data-animation-duration="2000">
+              <div class="u-container-layout u-container-layout-5">
                 <img class="u-image u-image-default u-image-3" src="images/8f9c8a40bd61fe834441e9cb9c05a968.jpg" alt="" data-image-width="563" data-image-height="375">
               </div>
             </div>
           </div>
         </div>
       </div>
+      <img class="u-image u-image-default u-image-4" src="images/FashionLookFeaturingDisneyKidsNurseryClothesandToysandDisneyClothesandShoesbynewdarlings-ShopStyle-8.jpg" alt="" data-image-width="864" data-image-height="1080">
     </section>
     <section class="u-align-center u-clearfix u-section-2" id="sec-5cd4">
       <div class="u-clearfix u-sheet u-sheet-1"><!--products--><!--products_options_json--><!--{"type":"Recent","source":"","tags":"","count":""}--><!--/products_options_json-->
-        <div class="u-expanded-width u-layout-grid u-products u-products-1">
+        <div class="u-expanded-width u-products u-products-1">
           <div class="u-repeater u-repeater-1"><!--product_item-->
-            <div class="u-align-center u-container-style u-gradient u-products-item u-repeater-item u-repeater-item-1">
+            <div class="u-align-center u-container-style u-products-item u-repeater-item u-white u-repeater-item-1">
               <div class="u-container-layout u-similar-container u-container-layout-1"><!--product_image-->
-                <img alt="" class="u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-image u-image-default u-product-control u-image-1" src="images/WhatsAppImage2022-03-31at10.16.39AM1.jpeg" data-image-width="1100" data-image-height="1100"><!--/product_image-->
-                <h3 class="u-custom-font u-font-montserrat u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="2000">&nbsp;Wembley Dancing Cactus Toy for Baby Funny Cactus Talking Toy for Baby Kids Soft Plush Talk Back Toy, Can Sing, Record and Repeats What You Say Creative Kids Educational Musical Toys Game for Children Rechargeable<br>
+                <img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-1" src="images/WhatsAppImage2022-03-31at10.16.39AM1.jpeg" data-image-width="1100" data-image-height="1100"><!--/product_image-->
+                <p class="u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="2000">&nbsp;Wembley Dancing Cactus Toy for Baby Funny Cactus Talking Toy for Baby Kids Soft Plush Talk Back Toy, Can Sing, Record and Repeats What You Say Creative Kids Educational Musical Toys Game for Children Rechargeable<br>
                   <br>Please
 click the Amazon link below to order. Place your order today.<br>
-                </h3>
-                <a href="https://amzn.to/3iOacdS" class="u-active-none u-border-none u-border-palette-1-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-palette-5-light-2 u-palette-2-light-2 u-radius-0 u-text-grey-90 u-top-left-radius-0 u-top-right-radius-0 u-btn-1">amazon.in</a>
+                </p>
+                <a href="https://amzn.to/3iOacdS" class="u-active-none u-border-none u-border-palette-1-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-palette-5-light-2 u-palette-2-light-2 u-radius-0 u-text-grey-90 u-top-left-radius-0 u-top-right-radius-0 u-btn-1" target="_blank">amazon.in</a>
               </div>
             </div><!--/product_item--><!--product_item-->
-            <div class="u-align-center u-container-style u-gradient u-products-item u-repeater-item u-repeater-item-2">
+            <div class="u-align-center u-container-style u-products-item u-repeater-item u-white u-repeater-item-2">
               <div class="u-container-layout u-similar-container u-container-layout-2"><!--product_image-->
-                <img alt="" class="u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-image u-image-default u-product-control u-image-2" src="images/33.jpg" data-image-width="1200" data-image-height="1200"><!--/product_image-->
-                <h3 class="u-custom-font u-font-montserrat u-text u-text-2" data-animation-name="customAnimationIn" data-animation-duration="2000"> HUG 'n' FEEL SOFT TOYS Teddy bear 6 feet, Soft toy, Teddy bear 6 feet for girls, Teddy bear 6 feet for girls, Soft toys for kids, Birthday gift for girls,Wife,Girlfriend,Husband, Gift items toy, (Purple, 6 feet)&nbsp;&nbsp;<br>
+                <img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-2" src="images/33.jpg" data-image-width="1200" data-image-height="1200"><!--/product_image-->
+                <p class="u-text u-text-2" data-animation-name="customAnimationIn" data-animation-duration="2000"> HUG 'n' FEEL SOFT TOYS Teddy bear 6 feet, Soft toy, Teddy bear 6 feet for girls, Teddy bear 6 feet for girls, Soft toys for kids, Birthday gift for girls,Wife,Girlfriend,Husband, Gift items toy, (Purple, 6 feet)&nbsp;&nbsp;<br>
                   <br>Please click the Amazon link below to order.
 Place your order today.&nbsp;&nbsp;<br>
-                </h3>
-                <a href="https://amzn.to/3u4TqgS" class="u-active-none u-border-none u-border-palette-1-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-palette-5-light-2 u-palette-2-light-2 u-radius-0 u-text-grey-90 u-top-left-radius-0 u-top-right-radius-0 u-btn-2">amazon.in</a>
+                </p>
+                <a href="https://amzn.to/3u4TqgS" class="u-active-none u-border-none u-border-palette-1-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-palette-5-light-2 u-palette-2-light-2 u-radius-0 u-text-grey-90 u-top-left-radius-0 u-top-right-radius-0 u-btn-2" target="_blank">amazon.in</a>
               </div>
             </div><!--/product_item--><!--product_item-->
-            <div class="u-align-center u-container-style u-gradient u-products-item u-repeater-item u-repeater-item-3">
+            <div class="u-align-center u-container-style u-products-item u-repeater-item u-white u-repeater-item-3">
               <div class="u-container-layout u-similar-container u-container-layout-3"><!--product_image-->
-                <img alt="" class="u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-image u-image-default u-product-control u-image-3" src="images/81-1xs0GrpL._SL1500_.jpg" data-image-width="1500" data-image-height="1177"><!--/product_image-->
-                <h3 class="u-custom-font u-font-montserrat u-text u-text-3" data-animation-name="customAnimationIn" data-animation-duration="2000">Zest 4 toyz 25 musical army style toy gun for kids with music, lights and laser light -(battery included)-Multi coloron<br>
+                <img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-3" src="images/81-1xs0GrpL._SL1500_.jpg" data-image-width="1500" data-image-height="1177"><!--/product_image-->
+                <p class="u-text u-text-3" data-animation-name="customAnimationIn" data-animation-duration="2000">Zest 4 toyz 25 musical army style toy gun for kids with music, lights and laser light -(battery included)-Multi coloron<br>
                   <br>Please click the Amazon link below to orde. Place your order today.&nbsp;&nbsp;<br>
-                </h3>
-                <a href="https://amzn.to/3uSmJCL" class="u-active-none u-border-none u-border-palette-1-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-palette-5-light-2 u-palette-2-light-2 u-radius-0 u-text-grey-90 u-top-left-radius-0 u-top-right-radius-0 u-btn-3">amazon.in</a>
+                </p>
+                <a href="https://amzn.to/3uSmJCL" class="u-active-none u-border-none u-border-palette-1-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-palette-5-light-2 u-palette-2-light-2 u-radius-0 u-text-grey-90 u-top-left-radius-0 u-top-right-radius-0 u-btn-3" target="_blank">amazon.in</a>
               </div>
             </div><!--/product_item-->
           </div>
@@ -149,7 +152,7 @@ Place your order today.&nbsp;&nbsp;<br>
     
     <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-footer u-grey-80" id="sec-0d5c"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="208" data-image-height="145">
-          <img src="images/12-removebg-preview.png" class="u-logo-image u-logo-image-1">
+          <img src="images/12-removebg-preview-5.png" class="u-logo-image u-logo-image-1">
         </a>
         <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" title="facebook" target="_blank" href="https://www.facebook.com/SengarPihu/"><span class="u-icon u-social-facebook u-social-icon u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-6f84"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-6f84"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M73.5,31.6h-9.1c-1.4,0-3.6,0.8-3.6,3.9v8.5h12.6L72,58.3H60.8v40.8H43.9V58.3h-8V43.9h8v-9.2
