--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </a>
         </div>
       </div></header>
-    <section class="u-clearfix u-section-1" id="carousel_9c88">
+    <section class="u-clearfix u-valign-middle-sm u-valign-middle-xs u-section-1" id="carousel_9c88">
       <div class="u-expanded-width u-palette-2-light-2 u-shape u-shape-rectangle u-shape-1"></div>
       <div class="u-container-style u-group u-shape-rectangle u-group-1">
         <div class="u-container-layout u-container-layout-1">
@@ -110,41 +110,45 @@ Flipkart baby products.</p>
         </div>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-section-2" id="sec-5cd4">
-      <div class="u-clearfix u-sheet u-sheet-1"><!--products--><!--products_options_json--><!--{"type":"Recent","source":"","tags":"","count":""}--><!--/products_options_json-->
-        <div class="u-expanded-width u-products u-products-1">
-          <div class="u-repeater u-repeater-1"><!--product_item-->
-            <div class="u-align-center u-container-style u-products-item u-repeater-item u-white u-repeater-item-1">
-              <div class="u-container-layout u-similar-container u-container-layout-1"><!--product_image-->
-                <img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-1" src="images/WhatsAppImage2022-03-31at10.16.39AM1.jpeg" data-image-width="1100" data-image-height="1100"><!--/product_image-->
-                <p class="u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="2000">&nbsp;Wembley Dancing Cactus Toy for Baby Funny Cactus Talking Toy for Baby Kids Soft Plush Talk Back Toy, Can Sing, Record and Repeats What You Say Creative Kids Educational Musical Toys Game for Children Rechargeable<br>
+    <section class="u-clearfix u-section-2" id="sec-67d5">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <div class="u-expanded-width u-list u-list-1">
+          <div class="u-repeater u-repeater-1">
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1">
+                <img alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="1100" data-image-height="1100" src="images/WhatsAppImage2022-03-31at10.16.39AM1.jpeg">
+                <h3 class="u-text u-text-default u-text-1"> Dancing Cactus Toy</h3>
+                <p class="u-text u-text-2"> Wembley Dancing Cactus Toy for Baby Funny Cactus Talking Toy for Baby Kids Soft Plush Talk Back Toy, Can Sing, Record and Repeats What You Say Creative Kids Educational Musical Toys Game for Children Rechargeable<br>
                   <br>Please
 click the Amazon link below to order. Place your order today.<br>
                 </p>
-                <a href="https://amzn.to/3iOacdS" class="u-active-none u-border-none u-border-palette-1-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-palette-5-light-2 u-palette-2-light-2 u-radius-0 u-text-grey-90 u-top-left-radius-0 u-top-right-radius-0 u-btn-1" target="_blank">amazon.in</a>
+                <a href="https://amzn.to/3iOacdS" class="u-active-none u-border-hover-palette-2-base u-border-none u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-1" target="_blank">amazon link</a>
               </div>
-            </div><!--/product_item--><!--product_item-->
-            <div class="u-align-center u-container-style u-products-item u-repeater-item u-white u-repeater-item-2">
-              <div class="u-container-layout u-similar-container u-container-layout-2"><!--product_image-->
-                <img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-2" src="images/33.jpg" data-image-width="1200" data-image-height="1200"><!--/product_image-->
-                <p class="u-text u-text-2" data-animation-name="customAnimationIn" data-animation-duration="2000"> HUG 'n' FEEL SOFT TOYS Teddy bear 6 feet, Soft toy, Teddy bear 6 feet for girls, Teddy bear 6 feet for girls, Soft toys for kids, Birthday gift for girls,Wife,Girlfriend,Husband, Gift items toy, (Purple, 6 feet)&nbsp;&nbsp;<br>
-                  <br>Please click the Amazon link below to order.
-Place your order today.&nbsp;&nbsp;<br>
+            </div>
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2">
+                <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="1200" data-image-height="1200" src="images/33.jpg">
+                <h3 class="u-text u-text-default u-text-3"> SOFT TOYS Teddy bear</h3>
+                <p class="u-text u-text-4">Click to​HUG 'n' FEEL SOFT TOYS Teddy bear 6 feet, Soft toy, Teddy bear 6 feet for girls, Teddy bear 6 feet for girls, Soft toys for kids, Birthday gift for girls,Wife,Girlfriend,Husband, Gift items toy, (Purple, 6 feet)select the text box.&nbsp;<br>
+                  <br> Please click the Amazon link below to order. Place your
+order today. 
                 </p>
-                <a href="https://amzn.to/3u4TqgS" class="u-active-none u-border-none u-border-palette-1-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-palette-5-light-2 u-palette-2-light-2 u-radius-0 u-text-grey-90 u-top-left-radius-0 u-top-right-radius-0 u-btn-2" target="_blank">amazon.in</a>
+                <a href="https://amzn.to/3KdugCo" class="u-active-none u-border-hover-palette-2-base u-border-none u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-2" target="_blank">amazon link</a>
               </div>
-            </div><!--/product_item--><!--product_item-->
-            <div class="u-align-center u-container-style u-products-item u-repeater-item u-white u-repeater-item-3">
-              <div class="u-container-layout u-similar-container u-container-layout-3"><!--product_image-->
-                <img alt="" class="u-expanded-width u-image u-image-default u-product-control u-image-3" src="images/81-1xs0GrpL._SL1500_.jpg" data-image-width="1500" data-image-height="1177"><!--/product_image-->
-                <p class="u-text u-text-3" data-animation-name="customAnimationIn" data-animation-duration="2000">Zest 4 toyz 25 musical army style toy gun for kids with music, lights and laser light -(battery included)-Multi coloron<br>
-                  <br>Please click the Amazon link below to orde. Place your order today.&nbsp;&nbsp;<br>
+            </div>
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
+                <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="1500" data-image-height="1177" src="images/81-1xs0GrpL._SL1500_.jpg">
+                <h3 class="u-text u-text-default u-text-5">&nbsp;Army style toy Gun</h3>
+                <p class="u-text u-text-6"> zest 4 toyz 25 musical army style toy gun for kids with music, lights and laser light (Multi color)<br>
+                  <br>&nbsp; Please click the Amazon link below to order. Place your
+order today.&nbsp;&nbsp;<br>
                 </p>
-                <a href="https://amzn.to/3uSmJCL" class="u-active-none u-border-none u-border-palette-1-base u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-palette-5-light-2 u-palette-2-light-2 u-radius-0 u-text-grey-90 u-top-left-radius-0 u-top-right-radius-0 u-btn-3" target="_blank">amazon.in</a>
+                <a href="https://amzn.to/3r57NA1" class="u-active-none u-border-hover-palette-2-base u-border-none u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-3" target="_blank">Amazon link</a>
               </div>
-            </div><!--/product_item-->
+            </div>
           </div>
-        </div><!--/products-->
+        </div>
       </div>
     </section>
     
