--- a/Products.html
+++ b/Products.html
@@ -20,7 +20,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "juniorstore",
-		"logo": "images/12-removebg-preview.png",
+		"logo": "images/12-removebg-preview-5.png",
 		"sameAs": [
 				"https://www.facebook.com/SengarPihu/",
 				"https://www.instagram.com/baby_styleproducts/",
@@ -37,7 +37,7 @@
   </head>
   <body class="u-body u-xl-mode"><header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-35c2"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="208" data-image-height="145">
-          <img src="images/12-removebg-preview.png" class="u-logo-image u-logo-image-1">
+          <img src="images/12-removebg-preview-5.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-align-left u-dropdown-icon u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem;">
@@ -91,12 +91,11 @@
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1">
-                <img alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="679" data-image-height="679" src="images/71ReOObbsWL._SX679_.jpg">
-                <h3 class="u-text u-text-default u-text-1"> AMD Ryzen 5-5500U 14 inches FHD</h3>
-                <p class="u-text u-text-2"> HP 14s, AMD Ryzen 5-5500U 14 inches FHD, IPS, Micro-Edge Display Laptop (8GB RAM/512GB SSD /Radeon Graphics/Windows 11/Alexa/Backlit Keyboard/MS Office/1.46kg, 14s-fq1092au)<br>
-                  <br>Product's Amazon Link is given below.<br>Order it Now.<br>
+                <img alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="679" data-image-height="679" src="images/51i5fkWhjzL._SX679_.jpg">
+                <h3 class="u-text u-text-default u-text-1"> Selfie Stick&nbsp;</h3>
+                <p class="u-text u-text-2"> Hoteon Mobilife Bluetooth Extendable Selfie Stick with Wireless Remote and Tripod Stand for iPhone X/iPhone 8/8 Plus/iPhone 7/iPhone 7 Plus/Galaxy Note 8/Google More (Black)<br>Product's Amazon Link is given below.<br>Order it Now.<br>
                 </p>
-                <a href="https://amzn.to/3DMW5yX" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-1">amazon  link</a>
+                <a href="https://amzn.to/3JyquSQ" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-1" target="_blank">amazon  link</a>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
@@ -165,7 +164,7 @@
     
     <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-footer u-grey-80" id="sec-0d5c"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="208" data-image-height="145">
-          <img src="images/12-removebg-preview-5.png" class="u-logo-image u-logo-image-1">
+          <img src="images/12-removebg-preview.png" class="u-logo-image u-logo-image-1">
         </a>
         <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" title="facebook" target="_blank" href="https://www.facebook.com/SengarPihu/"><span class="u-icon u-social-facebook u-social-icon u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-6f84"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-6f84"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M73.5,31.6h-9.1c-1.4,0-3.6,0.8-3.6,3.9v8.5h12.6L72,58.3H60.8v40.8H43.9V58.3h-8V43.9h8v-9.2
